@@ -123,6 +123,7 @@ libcommon_enable_seccomp = get_option('seccomp')
 libcommon_enable_libsystemd = libsystemd.found()
 
 subdir('libcommon/src/util')
+subdir('libcommon/src/uri')
 subdir('libcommon/src/co')
 subdir('libcommon/src/lib/cap')
 subdir('libcommon/src/lib/fmt')
@@ -262,6 +263,7 @@ executable('cm4all-workshop',
     pg_dep,
     curl_dep,
     fmt_dep,
+    uri_dep,
   ],
   install: true,
   install_dir: 'sbin',
